--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 		  </dependency>
@@ -96,5 +101,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
