--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,11 @@
 spring.application.name=user-service
-spring.config.import=secrets.properties
+
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=${SPRING_DATASOURCE_URL_DEV}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME_DEV}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD_DEV}
+server.port=${SPRING_PORT_DEV}
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
