--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,17 @@
 spring.application.name=user-service
 
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=file:.env[.properties]
 
-spring.datasource.url=${SPRING_DATASOURCE_URL_DEV}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME_DEV}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD_DEV}
-server.port=${SPRING_PORT_DEV}
+spring.datasource.url=${DEV_SPRING_DATASOURCE_URL}
+spring.datasource.username=${DEV_SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${DEV_SPRING_DATASOURCE_PASSWORD}
+server.port=${DEV_SPRING_PORT}
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # logging.level.org.springframework.jdbc.core=DEBUG
+logging.file.name=application.log
+logging.file.path=logs/application.log
 spring.jpa.show-sql= true
