--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,10 +2,10 @@ spring.application.name=user-services
 
 spring.config.import=file:.env[.properties]
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-server.port=${SPRING_PORT}
+spring.datasource.url=${PROD_SPRING_DATASOURCE_URL}
+spring.datasource.username=${PROD_SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${PROD_SPRING_DATASOURCE_PASSWORD}
+server.port=${PROD_SPRING_PORT}
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
