--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
