--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,11 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.hikari.maximum-pool-size=${DB_MAX_POOL_SIZE}
+spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE_CONNECTIONS}
+spring.datasource.hikari.max-lifetime=${DB_CONNECTION_LIFETIME_MS}
+spring.datasource.hikari.connection-timeout=${DB_CONNECTION_TIMEOUT_MS}
+
 # logging.level.org.springframework.jdbc.core=DEBUG
 logging.file.name=application.log
 logging.file.path=logs/application.log
