--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,11 @@ spring.datasource.username=${PROD_SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${PROD_SPRING_DATASOURCE_PASSWORD}
 server.port=${PROD_SPRING_PORT}
 
+spring.datasource.hikari.maximum-pool-size=${DB_MAX_POOL_SIZE}
+spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE_CONNECTIONS}
+spring.datasource.hikari.max-lifetime=${DB_CONNECTION_LIFETIME_MS}
+spring.datasource.hikari.connection-timeout=${DB_CONNECTION_TIMEOUT_MS}
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
