--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.profiles.active=${ACTIVE_PROFILE}
+
+spring.application.name=user-service
+
+spring.datasource.hikari.maximum-pool-size=${DB_MAX_POOL_SIZE}
+spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE_CONNECTIONS}
+spring.datasource.hikari.max-lifetime=${DB_CONNECTION_LIFETIME_MS}
+spring.datasource.hikari.connection-timeout=${DB_CONNECTION_TIMEOUT_MS}
+
+spring.task.execution.pool.core-size=${THREAD_CORE_POOL_SIZE}
+spring.task.execution.pool.max-size=${THREAD_MAX_POOL_SIZE}
+spring.task.execution.pool.queue-capacity=${THREAD_QUEUE_CAPACITY}
+spring.task.execution.pool.keep-alive=${THREAD_KEEP_ALIVE_MS}
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
