login now sends jwt token on authorization response

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,4 +8,4 @@ server.port=${DEV_SPRING_PORT}
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.file.name=application.log
 logging.file.path=logs/application.log
-spring.jpa.show-sql= true
+# spring.jpa.show-sql= true
