authenticatioon removed (to be implemented on an api gateway) and added get user

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,11 @@ spring.datasource.username=${DEV_SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${DEV_SPRING_DATASOURCE_PASSWORD}
 server.port=${DEV_SPRING_PORT}
 
-logging.level.org.springframework.jdbc.core=DEBUG
+# logging.level.org.springframework.jdbc.core=DEBUG
 logging.file.name=application.log
 logging.file.path=logs/application.log
 # spring.jpa.show-sql= true
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.servlet=DEBUG
